# nanollm

./: .gitignore  README.md  download_sample_data.py  download_wikipedia.py  generate_samples.py  generate_with_wikipedia.py  inference_example.py  notes.md  pyproject.toml  suggested-notes.md  train_on_samples.py  train_wikipedia.py
examples/: generate_text.py  train_simple.py
nanollm/: __init__.py  config.py  inference.py  model.py  tokenizer.py  trainer.py
